--- a/prodotti.html
+++ b/prodotti.html
@@ -33,10 +33,10 @@
             </div>
 
             <div class="container_links">
-                <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
+                <a class="link_navbar" href="index.html">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
                 <a class="link_navbar" href="">ShowRoom</a>
-                <a class="link_navbar" href="prodotti.html">Prodotti</a>
+                <a class="link_navbar" href="prodotti.html" style="color: #F0B357; text-decoration: underline">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
         </nav>
