--- a/contatti.html
+++ b/contatti.html
@@ -18,101 +18,115 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Contatti</title>
 </head>
-<body onresize="restoreDesktopMenu(); setSizeContainer();" onload="setSizeContainer();">
+<body>
 
     <header>
         <nav class="container_navbar">
             <a href="index.html" class="logo_navbar">
-                <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
+                <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
             </a>
 
-            <!-- hamburger viene visualizzato solamente quando non si è in modalita desktop -->
             <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
             </div>
 
-            <div class="nav_links">
-                <a class="link_navbar" href="index.html" >Home</a>
+            <div class="container_links">
+                <a class="link_navbar" href="index.html">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-                <a class="link_navbar" href="showroom.html">ShowRoom</a>
+                <a class="link_navbar" href="">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html" style="color: #F0B357; text-decoration: underline">Contatti</a>
             </div>
         </nav>
     </header>
 
-    <div  class="main_img">
+    <div class="container_immagine_principale">
         <h1 class="frase">Entra in contatto con noi, siamo qui per ascoltare le tue esigenze e trasformare ogni tua richiesta in un’esperienza significativa per la tua casa!</h1>
     </div>
 
-    <div class="info_preventivo">
-        <div class="descrizione_sezione">
-            <h1>RICHIEDI UN PREVENTIVO GRATUITO</h1>
-            <p class="body">Siamo emozionati di offrirti la possibilità di dare vita alla tua visione attraverso la nostra sezione "Richiedi un Preventivo". Qui, vogliamo invitarti a condividere i dettagli del tuo progetto, aprendo le porte a un'esperienza personalizzata di porte e infissi che si adatteranno perfettamente al tuo stile e alle tue esigenze uniche.
+    <div class="sezione_info_preventivo">
+
+        <div class="container_descrizione">
+            <h1 class="header_descrizione">RICHIEDI UN PREVENTIVO GRATUITO</h1>
+            <p class="body_descrizione">Siamo emozionati di offrirti la possibilità di dare vita alla tua visione attraverso la nostra sezione "Richiedi un Preventivo". Qui, vogliamo invitarti a condividere i dettagli del tuo progetto, aprendo le porte a un'esperienza personalizzata di porte e infissi che si adatteranno perfettamente al tuo stile e alle tue esigenze uniche.
                 Ogni progetto che affrontiamo è unico e speciale, proprio come la tua casa o il tuo spazio commerciale. Siamo qui per ascoltarti attentamente, per comprendere i tuoi desideri e per collaborare con te al fine di tradurre la tua visione in una realtà tangibile e affascinante.
                 La tua soddisfazione è la nostra massima priorità. Collaborando con noi, puoi avere la certezza che ogni dettaglio del tuo progetto sarà curato con attenzione e precisione. Concludiamo ogni fase con l'obiettivo di superare le tue aspettative, consegnandoti porte e infissi che non solo rispecchiano, ma elevano il tuo stile di vita.</p>
-            <p class="body">Inda Infissi con sede operativa a Sant’antonio abate e show room a angri è facilmente raggiungibile da Boscoreale, Poggiomarino, Pompei, Terzigno, Torre Annunziata, San Giuseppe Vesuviano, Ottaviano, San Gennaro Vesuviano, San Valentino Torio, San Marzano Sul Sarno, Angri, Pagani, Sant'Egido Del Monte Albino, Sant'Antonio Abate, Santa Maria La Carità e da tutti i Comuni Vesuviani e quelli dell'Agro Nocerino-Sarnese.</p>
+            <p class="body_descrizione">Inda Infissi con sede operativa a Sant’antonio abate e show room a angri è facilmente raggiungibile da Boscoreale, Poggiomarino, Pompei, Terzigno, Torre Annunziata, San Giuseppe Vesuviano, Ottaviano, San Gennaro Vesuviano, San Valentino Torio, San Marzano Sul Sarno, Angri, Pagani, Sant'Egido Del Monte Albino, Sant'Antonio Abate, Santa Maria La Carità e da tutti i Comuni Vesuviani e quelli dell'Agro Nocerino-Sarnese.</p>
         </div>
-        <div class="info">
-            <h1>SEDE E RECAPITI</h1>
-            <p>Via Teilliti, 55 - 80057 Sant'Antonio Abate (NA) - Sede Operativa</p>
-            <p>Via Teilliti, 55 - 80057 Sant'Antonio Abate (NA) - ShowRoom</p>
-            <button class="btn_chiama" id="chiama">
-                <div>
-                    <img src="/Immagini/SVG/phone.svg" alt="phone" width="100%" height="auto">
-                </div>
-                <p>CHIAMA ORA</p>
-            </button>
-            <p>Indainfissi@gmail.com</p>
-            <h1>ORARI DI APERTURA</h1>
-            <h2>SHOW ROOM</h2>
-            <div class="orari" style="display: flex; flex-direction: row; gap:10px">
-                <div class="giorni">
-                    <p>Lun-Ven</p>
-                    <p>&nbsp;</p>
-                    <p>Sabato</p>
-                    <p>Domenica</p>
-                </div>
-                <div class="ora">
-                    <p>08:00 - 13:00</p>
-                    <p>14:00 - 18:00</p>
-                    <p>08:00 - 13:00</p>
-                    <p>Chiusi</p>
-                </div>
+
+        <div class="container_info">
+
+            <div class="container_sede_e_recapiti">
+                <h1>SEDE E RECAPITI</h1>
+                <p>Via Teilliti, 55 - 80057 Sant'Antonio Abate (NA) - Sede Operativa</p>
+                <p>Via Teilliti, 55 - 80057 Sant'Antonio Abate (NA) - ShowRoom</p>
+                <button class="btn_chiama" id="chiama">
+                    <div class="icona_telefono">
+                        <img src="/Immagini/SVG/phone.svg" alt="phone" width="100%" height="auto">
+                    </div>
+                    <p>CHIAMA ORA</p>
+                </button>
+                <p>Indainfissi@gmail.com</p>
             </div>
-            <h2>SEDE OPERATIVA</h2>
-            <div class="orari" style="display: flex; flex-direction: row; gap:10px">
-                <div class="giorni">
-                    <p>Lun-Ven</p>
-                    <p>&nbsp;</p>
-                    <p>Sabato</p>
-                    <p>Domenica</p>
+
+            <div class="container_orari">
+                <h1>ORARI DI APERTURA</h1>
+
+                <div class="container_orario" style="display: flex; flex-direction: row; gap:10px">
+                    <h2>SHOW ROOM</h2>
+                    <div class="giorni">
+                        <p>Lun-Ven</p>
+                        <p>&nbsp;</p>
+                        <p>Sabato</p>
+                        <p>Domenica</p>
+                    </div>
+                    <div class="ora">
+                        <p>08:00 - 13:00</p>
+                        <p>14:00 - 18:00</p>
+                        <p>08:00 - 13:00</p>
+                        <p>Chiusi</p>
+                    </div>
                 </div>
-                <div class="ora">
-                    <p>08:00 - 13:00</p>
-                    <p>14:00 - 18:00</p>
-                    <p>08:00 - 13:00</p>
-                    <p>Chiusi</p>
+
+                <div class="container_orario" style="display: flex; flex-direction: row; gap:10px">
+                    <h2>SEDE OPERATIVA</h2>
+                    <div class="giorni">
+                        <p>Lun-Ven</p>
+                        <p>&nbsp;</p>
+                        <p>Sabato</p>
+                        <p>Domenica</p>
+                    </div>
+                    <div class="ora">
+                        <p>08:00 - 13:00</p>
+                        <p>14:00 - 18:00</p>
+                        <p>08:00 - 13:00</p>
+                        <p>Chiusi</p>
+                    </div>
                 </div>
+
             </div>
+
         </div>
 
     </div>
 
-    <div class="richiedi_preventivo">
-        <div class="map_container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.072694874342!2d14.536847476828235!3d40.71641617139306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbdff414b9427%3A0xc51e07b32a571dae!2sINDA%20porte%20%26%20finestre!5e0!3m2!1sit!2sit!4v1700815965651!5m2!1sit!2sit"
+    <div class="sezione_richiedi_preventivo" style="overflow: hidden">
+
+        <div class="container_mappa">
+            <iframe title="Posizione_Inda_Infissi" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.072694874342!2d14.536847476828235!3d40.71641617139306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbdff414b9427%3A0xc51e07b32a571dae!2sINDA%20porte%20%26%20finestre!5e0!3m2!1sit!2sit!4v1700815965651!5m2!1sit!2sit"
                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="form_container">
 
-            <form name="modulo" onsubmit="return sendMailPreventivo();" style="width: 100%">
+        <div class="container_form">
+
+            <form name="modulo_richiesta_preventivo"  style="width: 100%">
                 <h1>Richiedi un preventivo</h1>
                 <p>*Campi Obbligatori</p>
-                <p id="errore">Inserire un messaggio</p>
-                <div class="container">
+                <p id="errore"></p>
+
+                <div class="container_input_dati_cliente">
                     <div class="campo_form" >
                         <h2>*Nome</h2>
                         <input name="nome" type="text" placeholder="nome cognome">
@@ -127,7 +141,7 @@
                     </div>
                 </div>
 
-                <div class="campo_form">
+                <div class="campo_form_messaggio">
                     <h2>*Messaggio</h2>
                     <textarea name="messaggio" rows="10" placeholder="Richiesta preventivo porta blindata 200x70"></textarea>
                 </div>
@@ -137,7 +151,7 @@
                     <p>Ho letto l’Informativa e Autorizzo Il Trattamento Dei Miei Dati Personali Per le finalita Ivi indicate</p>
                 </div>
 
-                <input type="submit" class="submit">
+                <button class="submit">INVIA</button>
 
             </form>
 
@@ -146,14 +160,8 @@
     </div>
 
 
-
-
-
-
-
-
     <footer>
-        <div class="info_container">
+        <div class="container_info">
             <h1 class="footer-header">Dove Siamo</h1>
             <p class="footer-body">Show Room - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
             <p class="footer-body">Sede Operativa - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
@@ -161,10 +169,9 @@
             <h1 class="footer-header">Recapiti</h1>
             <p class="footer-body">+39 3394487294</p>
             <p class="footer-body">indainfissi@gmail.com</p>
-            <!--<button class="contattaci_footer">Contattaci</button>-->
         </div>
 
-        <div class="end_container">
+        <div class="social_and_credits_container">
             <div class="social_container">
                 <div class="social">
                     <img src="Immagini/SVG/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
@@ -177,20 +184,18 @@
                 </div>
             </div>
 
-            <div class="end_footer_container">
-                <h1  style="font-family: Kristi;">Inda <span>spa</span></h1>
+            <div class="credits_container">
+                <h1  style="font-family: Kristi, sans-serif;">Inda <span>spa</span></h1>
                 <p>P.Iva 02607220908</p>
                 <p>Privacy e Cookies Policy</p>
                 <p>Design Angelo Afeltra</p>
             </div>
         </div>
 
-
-
     </footer>
 
 </body>
-<script src="./Script/navbar_effect.js"></script>
+<script src="Script/navbar_script.js"></script>
 <script src="./Script/contatti_script.js"></script>
 <script src="Script/Animation/contatti_animation_script.js"></script>
 </html>
