--- a/prodotti_intermedia.html
+++ b/prodotti_intermedia.html
@@ -20,27 +20,27 @@
 </head>
 <body>
 
-<header>
-    <nav class="container_navbar">
-        <a href="index.html" class="logo_navbar">
-            <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
-        </a>
+    <header>
+        <nav class="container_navbar">
+            <a href="index.html" class="logo_navbar">
+                <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
+            </a>
 
-        <div class="hamburger">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-        </div>
+            <div class="hamburger">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </div>
 
-        <div class="container_links">
-            <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
-            <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-            <a class="link_navbar" href="">ShowRoom</a>
-            <a class="link_navbar" href="prodotti.html">Prodotti</a>
-            <a class="link_navbar" href="contatti.html">Contatti</a>
-        </div>
-    </nav>
-</header>
+            <div class="container_links">
+                <a class="link_navbar" href="index.html">Home</a>
+                <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
+                <a class="link_navbar" href="">ShowRoom</a>
+                <a class="link_navbar" href="prodotti.html" style="color: #F0B357; text-decoration: underline">Prodotti</a>
+                <a class="link_navbar" href="contatti.html">Contatti</a>
+            </div>
+        </nav>
+    </header>
 
     <div class="container_immagine_principale">
         <h1 class="frase">I NOSTRI PRODOTTI</h1>
