--- a/contatti.html
+++ b/contatti.html
@@ -35,7 +35,7 @@
             <div class="container_links">
                 <a class="link_navbar" href="index.html">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-                <a class="link_navbar" href="">ShowRoom</a>
+                <a class="link_navbar" href="showroom.html">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html" style="color: #F0B357; text-decoration: underline">Contatti</a>
             </div>
