--- a/showroom.html
+++ b/showroom.html
@@ -23,18 +23,17 @@
     <header>
         <nav class="container_navbar">
             <a href="index.html" class="logo_navbar">
-                <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
+                <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
             </a>
 
-            <!-- hamburger viene visualizzato solamente quando non si è in modalita desktop -->
             <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
             </div>
 
-            <div class="nav_links">
-                <a class="link_navbar" href="index.html" >Home</a>
+            <div class="container_links">
+                <a class="link_navbar" href="index.html">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
                 <a class="link_navbar" href="showroom.html" style="color: #F0B357; text-decoration: underline">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html">Prodotti</a>
@@ -43,68 +42,138 @@
         </nav>
     </header>
 
-    <div  class="main_img">
+    <div class="container_immagine_principale">
         <h1 class="frase">SHOW ROOM</h1>
     </div>
 
-    <div class="container_section1">
+    <div class="container_intro">
+
         <div class="container_slogan">
-            <h1>Benevenuto nel nostro <br> Show Room</h1>
-            <p>Qui i Sogni si trasformano in realtà</p>
+            <h1 class="header_slogan">Benevenuto nel nostro <br> Show Room</h1>
+            <p class="subheader_slogan">Qui i Sogni si trasformano in realtà</p>
         </div>
-        <div class="container_paroleChiavi">
-            <div class="container_parolaChiave block1">
-                <div class="img_space">
-                    <img src="Immagini/ShowRoom/sogno.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
+
+        <div class="container_caratteristiche">
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/ShowRoom/sogno.jpg" alt="Immagine Un Sogno" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
 
-                <div class="descrizione">
-                    <h1>Un Sogno</h1>
-                    <p>Esplora un mondo di possibilità dove l'immaginazione si traduce in una visione di casa perfetta.
-                        "Un sogno" rappresenta la fase iniziale di creazione, dove aspirazioni e desideri prendono forma, alimentando la speranza di uno spazio ideale e affascinante.</p>
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Un Sogno
+                    </h1>
+                    <p class="body_descrizione">
+                        Esplora un mondo di possibilità dove l'immaginazione si traduce in una visione di casa perfetta.
+                        "Un sogno" rappresenta la fase iniziale di creazione, dove aspirazioni e desideri prendono forma, alimentando la speranza di uno spazio ideale e affascinante.
+                    </p>
                 </div>
-                <div class="touch-btn btn1">
-                    <img src="Immagini/SVG/touch.svg">
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
                 </div>
+
             </div>
-            <div class="container_parolaChiave block2">
-                <div class="img_space">
-                    <img src="Immagini/ShowRoom/progetto.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/ShowRoom/progetto.jpg" alt="Immagine Progetto" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
 
-                <div class="descrizione">
-                    <h1>Un Progetto</h1>
-                    <p>Trasforma il tuo sogno in una pianificazione concreta e funzionale.
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Un Progetto
+                    </h1>
+                    <p class="body_descrizione">
+                        Trasforma il tuo sogno in una pianificazione concreta e funzionale.
                         "Un progetto" implica la traduzione delle idee in azioni, concentrandosi sulla progettazione di soluzioni personalizzate che soddisfano le esigenze estetiche e pratiche. Questa fase coinvolge decisioni dettagliate e un approccio pratico alla realizzazione del tuo ambiente ideale.</p>
+                    </p>
                 </div>
-                <div class="touch-btn btn2">
-                    <img src="Immagini/SVG/touch.svg">
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
                 </div>
+
             </div>
-            <div class="container_parolaChiave block3">
-                <div class="img_space">
-                    <img src="Immagini/ShowRoom/realta.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/ShowRoom/realta.jpg" alt="Una realtà" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
-                <div class="descrizione">
-                    <h1>Una Realtà</h1>
-                    <p>La fase finale in cui il sogno e il progetto si materializzano.
+
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Una Realtà
+                    </h1>
+                    <p class="body_descrizione">
+                        La fase finale in cui il sogno e il progetto si materializzano.
                         "Una realtà" rappresenta l'atto di rendere tangibile la visione, creando uno spazio reale e abitabile.
                         Qui, la combinazione di estetica e funzionalità si concretizza, offrendo una dimora che supera le aspettative e riflette fedelmente lo stile di vita e le preferenze del proprietario.</p>
+                    </p>
                 </div>
-                <div class="touch-btn btn3">
-                    <img src="Immagini/SVG/touch.svg">
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
                 </div>
+
             </div>
         </div>
+
     </div>
 
-    <div style="width: 100%; height: 300px;
-    background: rgb(119,4,4);
-    background: linear-gradient(129deg, rgba(119,4,4,1) 0%, rgba(181,65,65,1) 100%);">
-        <div class="container_slogan">
-            <h1 style="color:white;">Perche venire a trovarci?</h1>
+    <div class="sezione_richiedi_appuntamento" style="overflow: hidden">
+
+        <div class="container_mappa">
+            <iframe title="Posizione_Inda_Infissi" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.072694874342!2d14.536847476828235!3d40.71641617139306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbdff414b9427%3A0xc51e07b32a571dae!2sINDA%20porte%20%26%20finestre!5e0!3m2!1sit!2sit!4v1700815965651!5m2!1sit!2sit"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
+        <div class="container_form">
+
+            <form name="modulo_richiesta_appuntamento"  style="width: 100%">
+                <h1>Richiedi un appuntamento</h1>
+                <p>*Campi Obbligatori</p>
+                <p id="errore"></p>
+
+                <div class="container_input_dati_cliente">
+                    <div class="campo_form" >
+                        <h2>*Nome</h2>
+                        <input name="nome" type="text" placeholder="nome cognome">
+                    </div>
+                    <div class="campo_form">
+                        <h2>*Email</h2>
+                        <input name="mail" type="text" placeholder="exemple@exemple.it">
+                    </div>
+                    <div class="campo_form">
+                        <h2>*Telefono</h2>
+                        <input name="telefono" type="text" placeholder="3384472395">
+                    </div>
+                    <div class="campo_form">
+                        <h2>*Giorno</h2>
+                        <input name="giorno" type="date" placeholder="01-01-1900">
+                    </div>
+                </div>
+
+                <div class="container_trattamento_dati">
+                    <input type="checkbox" id="checkbox">
+                    <p>Ho letto l’Informativa e Autorizzo Il Trattamento Dei Miei Dati Personali Per le finalita Ivi indicate</p>
+                </div>
+
+                <button class="submit">INVIA</button>
+
+            </form>
+
+        </div>
+
     </div>
+
+
+
+
     <!--
     <div class="container_section2">
 
@@ -139,7 +208,7 @@
 
 
     <footer>
-        <div class="info_container">
+        <div class="container_info">
             <h1 class="footer-header">Dove Siamo</h1>
             <p class="footer-body">Show Room - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
             <p class="footer-body">Sede Operativa - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
@@ -150,7 +219,7 @@
             <!--<button class="contattaci_footer">Contattaci</button>-->
         </div>
 
-        <div class="end_container">
+        <div class="social_and_credits_container">
             <div class="social_container">
                 <div class="social">
                     <img src="Immagini/SVG/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
@@ -163,7 +232,7 @@
                 </div>
             </div>
 
-            <div class="end_footer_container">
+            <div class="credits_container">
                 <h1  style="font-family: Kristi;">Inda <span>spa</span></h1>
                 <p>P.Iva 02607220908</p>
                 <p>Privacy e Cookies Policy</p>
@@ -176,8 +245,7 @@
     </footer>
 
 </body>
-<script src="./Script/navbar_effect.js"></script>
+<script src="Script/navbar_script.js"></script>
 <script src="./Script/showroom_script.js"></script>
 <script src="Script/Animation/showroom_animation_script.js"></script>
-<script src="./Script/Animation/Animation.js"></script>
 </html>
