--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container_links">
                     <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
                     <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-                    <a class="link_navbar" href="">ShowRoom</a>
+                    <a class="link_navbar" href="showroom.html">ShowRoom</a>
                     <a class="link_navbar" href="prodotti.html">Prodotti</a>
                     <a class="link_navbar" href="contatti.html">Contatti</a>
                 </div>
