--- a/contatti.html
+++ b/contatti.html
@@ -64,7 +64,7 @@
                 <p>Via Teilliti, 55 - 80057 Sant'Antonio Abate (NA) - ShowRoom</p>
                 <button class="btn_chiama" id="chiama">
                     <div class="icona_telefono">
-                        <img src="/Immagini/SVG/phone.svg" alt="phone" width="100%" height="auto">
+                        <img src="Immagini/Contatti/phone.svg" alt="phone" width="100%" height="100%">
                     </div>
                     <p>CHIAMA ORA</p>
                 </button>
@@ -174,13 +174,13 @@
         <div class="social_and_credits_container">
             <div class="social_container">
                 <div class="social">
-                    <img src="Immagini/SVG/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
                 </div>
                 <div class="social">
-                    <img src="Immagini/SVG/instagram.svg" alt="instagram_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/instagram.svg" alt="instagram_logo" style="width: 100%; height: 100%;">
                 </div>
                 <div class="social">
-                    <img src="Immagini/SVG/linkedin.svg" alt="linkedin_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/linkedin.svg" alt="linkedin_logo" style="width: 100%; height: 100%;">
                 </div>
             </div>
 
