--- a/prodotti_intermedia.html
+++ b/prodotti_intermedia.html
@@ -80,13 +80,13 @@
         <div class="social_and_credits_container">
             <div class="social_container">
                 <div class="social">
-                    <img src="Immagini/SVG/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
                 </div>
                 <div class="social">
-                    <img src="Immagini/SVG/instagram.svg" alt="instagram_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/instagram.svg" alt="instagram_logo" style="width: 100%; height: 100%;">
                 </div>
                 <div class="social">
-                    <img src="Immagini/SVG/linkedin.svg" alt="linkedin_logo" style="width: 100%; height: 100%;">
+                    <img src="Immagini/Footer/linkedin.svg" alt="linkedin_logo" style="width: 100%; height: 100%;">
                 </div>
             </div>
 
