fix bug immagine vuota mobile

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                     <div class="subcontainer_immagine">
 
-                        <img src="./Immagini/Home/ImgChiSiamo.jpg" alt="Immagine ChiSiamo" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
+                        <img src="./Immagini/Home/ImgChiSiamo.jpg" alt="Immagine ChiSiamo" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black; object-fit: cover; object-position: center">
 
                     </div>
 
@@ -151,7 +151,7 @@
 
                 <div class="container_immagine">
 
-                    <img src="./Immagini/Home/ImgShowRoom.jpg" alt="Immagine ShowRoom" style="width: 100%; height: 100%">
+                    <img src="./Immagini/Home/ImgShowRoom.jpg" alt="Immagine ShowRoom" style="width: 100%; height: 100%; object-fit: cover; object-position: center">
 
                 </div>
 
@@ -196,7 +196,7 @@
                     <div class="img_bg2"></div>
 
                     <div class="subcontainer_immagine">
-                        <img src="./Immagini/Home/ImgProdotti.jpg" alt="Prodotti_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
+                        <img src="./Immagini/Home/ImgProdotti.jpg" alt="Prodotti_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black; object-fit: cover; object-position: center">
                     </div>
 
                 </div>
