--- a/prodotti.html
+++ b/prodotti.html
@@ -87,7 +87,8 @@
                         Ecologia e Risparmio
                     </h1>
                     <p class="body_descrizione">
-                        Ci impegniamo a promuovere uno stile di vita eco-sostenibile con i nostri serramenti progettati per massimizzare l'efficienza energetica e ridurre l'impatto ambientale. Utilizziamo materiali riciclabili e tecnologie all'avanguardia per garantire prestazioni ottimali e comfort abitativo, contribuendo così a preservare il nostro prezioso pianeta.
+
+                        Ci impegniamo per uno stile di vita eco-sostenibile con serramenti progettati per massimizzare l'efficienza energetica e ridurre l'impatto ambientale. Usiamo materiali riciclabili e tecnologie avanzate per prestazioni ottimali e comfort abitativo, contribuendo a preservare il nostro pianeta.
                     </p>
                 </div>
 
@@ -108,7 +109,7 @@
                         Sicurezza e Qualità
                     </h1>
                     <p class="body_descrizione">
-                        La tua sicurezza è la nostra priorità. I nostri serramenti sono progettati con la massima attenzione alla sicurezza, utilizzando materiali robusti e tecnologie avanzate. Ogni dettaglio è curato per offrire una protezione affidabile per la tua casa. Inoltre, ci impegniamo per garantire la massima qualità in ogni fase, dalla progettazione alla produzione.
+                        La tua sicurezza è la nostra priorità. Serramenti progettati con attenzione alla sicurezza, materiali robusti e tecnologie avanzate per una protezione affidabile. Impegno per la massima qualità in ogni fase, dalla progettazione alla produzione.
                     </p>
                 </div>
 
