--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 </body>
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    window.addEventListener("load", function() {
     var preloader = document.querySelector(".preloader");
     preloader.style.display = "none";
     });
